--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dope GraphQL Server",
   "main": "dist/index.js",
   "scripts": {
-    "start": "NODE_ENV=development nodemon src/server.js --exec babel-node",
+    "start": "nodemon src/server.js --exec babel-node",
     "flow": "./node_modules/.bin/flow check ./src",
     "build": "./node_modules/.bin/babel src -d dist --copy-files --source-maps=true",
     "flow-watch": "babel --watch=./src --out-dir=./dist --copy-files --source-maps=true",
@@ -15,6 +15,7 @@
     "apollo-server": "^0.2.5",
     "babel-runtime": "^6.11.6",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.4",
     "express": "^4.14.0",
     "graphql": "^0.6.2",
     "graphql-tools": "^0.6.4",
